<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:background="@color/color3"
    tools:context=".view.functionality.mop.FoundMopData">

    <TextView
        android:id="@+id/findmop3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="  WYSZUKAJ MOP"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/background_edit_text"
        android:drawableStart="@drawable/ic_crop_square_black_24dp"
        android:layout_marginBottom="2dp"
        />
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findmop3"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/findmop3"
            android:text="@string/findmop2_mopdata"
            android:layout_weight="33"
            android:background="@drawable/button_weathers"/>
        <Button
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/b1"
            android:layout_toRightOf="@+id/b1"
            android:text="@string/findmop2_roaddata"
            android:layout_weight="33"
            android:background="@drawable/button_weathers"/>
        <Button
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/b2"
            android:layout_toRightOf="@+id/b2"
            android:text="@string/findmop2_numberofplaces"
            android:layout_weight="33"
            android:background="@drawable/button_weathers"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:orientation="horizontal"
        >
        <Button
            android:layout_below="@+id/b3"
            android:layout_weight="50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bAddDelete"
            android:text="@string/findmop2_facilitiessafety"
            android:background="@drawable/button_weathers"
            />
        <Button
            android:layout_toRightOf="@+id/bAddDelete"
            android:layout_below="@+id/b3"
            android:layout_weight="50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bAddDelete2"
            android:text="@string/ownerdata"
            android:background="@drawable/button_weathers"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/mopname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text=""
        android:textSize="20dp"
        android:layout_below="@+id/linear2"
        android:layout_alignRight="@+id/findmop3"/>

    <ImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_local_parking_black_24dp"/>
</RelativeLayout>