<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/color3"
    tools:context=".view.login.LoginActivity">


    <Button
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_centerHorizontal="true"
        android:background="@color/color2"
        android:elevation="100dp"
        android:paddingLeft="50dp"
        android:paddingTop="16dp"
        android:paddingRight="50dp"
        android:paddingBottom="16dp"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="3"
        android:text="@string/log"
        android:textColor="@color/color0"
        android:onClick="onLog"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/login"
        android:inputType="text"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_edit_text"
        android:drawableLeft="@drawable/ic_username"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:background="@drawable/background_edit_text"
        android:drawableLeft="@drawable/ic_password"
        />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/truck_white"/>


</RelativeLayout>