<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/color3"
    tools:context=".view.main.MainMenu">

    <Button
        android:id="@+id/checkpo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/navigation"
        android:layout_marginBottom="3dp"
        android:background="@android:color/background_light"
        android:elevation="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="3"
        android:text="@string/checkpo"
        android:textSize="18dp"
        android:textColor="@color/color4"
        android:drawableLeft="@drawable/ic_my_location_black_24dp"
        android:onClick="onCheckPo"/>

    <Button
        android:id="@+id/navigation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/wherestop"
        android:layout_marginBottom="3dp"
        android:background="@android:color/background_light"
        android:elevation="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="3"
        android:text="@string/navigation"
        android:textSize="18dp"
        android:textColor="@color/color4"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:onClick="onNavigatioMen" />

    <Button
        android:id="@+id/wherestop"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/findmop"
        android:layout_marginBottom="3dp"
        android:background="@android:color/background_light"
        android:elevation="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="3"
        android:text="@string/wherestop"
        android:textSize="18dp"
        android:textColor="@color/color4"
        android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
        android:onClick="onMapsActivityPullof"/>

    <Button
        android:id="@+id/findmop"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="3dp"
        android:background="@android:color/background_light"
        android:elevation="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="3"
        android:text="@string/findmop"
        android:textSize="18dp"
        android:textColor="@color/color4"
        android:drawableLeft="@drawable/ic_local_parking_black_24dp"
        android:onClick="onFindMo"/>


    <Button
        android:id="@+id/wheather"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/findmop"
        android:layout_marginBottom="10dp"
        android:background="@android:color/background_light"
        android:elevation="100dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="3"
        android:text="@string/wheather"
        android:textSize="18dp"
        android:textColor="@color/color4"
        android:drawableLeft="@drawable/ic_wb_sunny_black_24dp"
        android:onClick="onFindWeathe"/>


    <ImageView
        android:id="@+id/photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/truck_white"/>


</RelativeLayout>